# duck-do

./: .env-template  .gitignore  Cargo.toml  client-db.sqlite
crates/client_core/: Cargo.toml
crates/client_core/src/: task.rs
crates/client_core/src/task/: create.rs  impls.rs  ports.rs
crates/domain/: Cargo.toml
crates/domain/src/: task.rs
crates/linux_client/: Cargo.toml
crates/linux_client/src/: config.rs  main.rs
crates/linux_client/src/inbound/: cli.rs
crates/linux_client/src/outbound/: sqlite.rs
migrations/: 20251214143436_create_tasks.sql
